<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.login.ReqotpFragment"
    >
    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kode"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_gravity="center"
                    />
                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    app:ccp_defaultLanguage="INDONESIA"
                    app:ccp_hintExampleNumber="true"
                    app:ccp_textSize="16sp"
                    app:ccp_defaultPhoneCode="62"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nomor_telepon"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_gravity="center"
                    />
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ettelepon"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="phone|number"
                    android:background="@color/white"
                    android:layout_gravity="center"
                    android:hint="Ex. 81234567890"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/kirimotp"
                android:textAllCaps="false"
                android:textSize="16sp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>