<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    tools:context=".fragments.login.LoginFragment"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/white"
        >
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="80dp"
            android:alpha="0.1"
            app:lottie_fileName="lav_viruspurple.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_speed="1"
            />
        <ImageView
            android:id="@+id/ivlogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/corona"
            android:alpha="0.05"
            android:layout_centerVertical="true"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvlogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/billabong"
            android:textSize="60dp"
            android:textAlignment="center"
            android:layout_marginBottom="50dp"
            android:textColor="@color/purple_500"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"
            />
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            >
            <FrameLayout
                android:id="@+id/fl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                >
            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            >
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvtentangplikasi"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textAlignment="center"
                android:textSize="16sp"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy"
                android:textAlignment="center"
                />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>